--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,1 @@
-spring.application.name=20jcode
-spring.mvc.hiddenmethod.filter.enabled=true
-
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
-spring.datasource.url=jdbc:h2:~/test
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=na
-spring.datasource.password=
+spring.application.name=spring-gift
