--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,8 +2,11 @@ spring:
   datasource:
     driver-class-name: org.h2.Driver
     url: jdbc:h2:mem:test
-
-
+    username: sa
+    password:
+    h2 :
+      console:
+        enabled : true
 
 sql:
   init:
