--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,14 @@
 spring.application.name=spring-gift
+
+# h2 DB
+spring.h2.console.enabled=true
+spring.datasource.url= jdbc:h2:mem:test
+spring.datasource.username= sa
+spring.datasource.password=
+spring.datasource.driver-class-name= org.h2.Driver
+spring.sql.init.schema-locations= classpath:db/h2/schema.sql
+spring.sql.init.mode= always
+
+# log
+logging.level.org.springframework.jdbc=DEBUG
+logging.level.org.springframework.boot.autoconfigure.jdbc=DEBUG
