--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,6 @@ spring.application.name=spring-gift
 spring.h2.console.enabled=true
 # db url
 spring.datasource.url=jdbc:h2:mem:test
-spring.sql.init.schema-locations=schema.sql
-spring.sql.init.data-locations=data.sql
+spring.sql.init.schema-locations=classpath:schema.sql
+spring.sql.init.data-locations=classpath:data.sql
 spring.sql.init.mode=always
