feat: sql 파일 추가

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=spring-gift
+
+spring.h2.console.enabled=true
+spring.datasource.url=jdbc:h2:mem:test
+spring.datasource.username=sa
+
+spring.sql.init.schema-locations=classpath:sql/schema.sql
+spring.sql.init.data-locations=classpath:sql/data.sql
+
+spring.sql.init.mode=always
