--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=spring-gift
+
+spring.datasource.driver-class-name=org.h2.Driver
+# h2-console ??? ??
+spring.h2.console.enabled=true
+# db url
+spring.datasource.url=jdbc:h2:mem:test
+# db username
+spring.datasource.username=sa
