--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=spring-gift
+spring.datasource.url=jdbc:h2:mem:test
 spring.h2.console.enabled=true
 spring.sql.init.mode=always
 spring.sql.init.schema-locations=classpath:db/schema.sql
