--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,5 +5,6 @@ spring.datasource.username=sa
 spring.datasource.password=
 spring.h2.console.enabled=true
 
-spring.sql.init.schema-locations=schema.sql
-spring.sql.init.data-locations=data.sql
+spring.sql.init.schema-locations=classpath:schema.sql
+spring.sql.init.data-locations=classpath:data.sql
+spring.sql.init.mode=always
