--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.application.name=spring-gift
 spring.h2.console.enabled=true
-spring.database.url=jdbc:h2:mem:test
+spring.datasource.url=jdbc:h2:mem:test
 spring.datasource.username=sa
