--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,3 +3,19 @@ spring:
     hidden-method:
       filter:
         enabled: true
+
+  datasource:
+    driver-class-name: org.h2.Driver
+    url: jdbc:h2:mem:test
+    username: sa
+    password:
+
+  h2:
+    console:
+      enabled: true
+      path: /h2-console
+
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: true
