--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=spring-gift
+
+spring.datasource.url=jdbc:h2:mem:productdb
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.h2.console.enabled=true
+
+spring.sql.init.mode=always
+spring.sql.init.schema-locations=classpath:schema.sql
