chore: build.gradle h2, jdbc 의존성 추가

--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,11 @@ plugins {
 group = 'camp.nextstep.edu'
 version = '0.0.1-SNAPSHOT'
 
+dependencies {
+    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
+    runtimeOnly 'com.h2database:h2'
+}
+
 java {
     toolchain {
         languageVersion = JavaLanguageVersion.of(21)
