--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,4 @@ spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
 spring.sql.init.schema-locations=classpath:script/schema.sql
+spring.sql.init.data-locations=classpath:script/data.sql
