--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 spring.application.name=spring-gift
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
-# h2-console ??? ??
+
+# database
 spring.h2.console.enabled=true
-# db url
 spring.datasource.url=jdbc:h2:mem:test
+spring.datasource.username=kwin
