--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.application.name=spring-gift
 spring.h2.console.enabled=true
 # db url
 spring.datasource.url=jdbc:h2:mem:test
+spring.sql.init.mode=always
