--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,4 @@ spring.thymeleaf.suffix=.html
 spring.h2.console.enabled=true
 spring.datasource.url=jdbc:h2:mem:test
 spring.datasource.username=kwin
+spring.sql.init.mode=always
