feat(application.yml)
db 설정을 추가

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,3 +4,9 @@ spring:
     prefix: classpath:/templates/
     suffix: .html
     caceh: false
+    
+  h2:
+    console:
+      enabled: true
+  datasource:
+    url: jdbc:h2:mem:test
