refactor: modify build.gradle file

--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ version = '0.0.1-SNAPSHOT'
 
 java {
     toolchain {
-        languageVersion = JavaLanguageVersion.of(21)
+        languageVersion = JavaLanguageVersion.of(22)
     }
 }
 
@@ -29,4 +29,8 @@ dependencies {
 tasks.named('test') {
     useJUnitPlatform()
     jvmArgs '-Xshare:off'
+}
+
+springBoot {
+    mainClass.set('gift.Application')
 }
