--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=spring-gift
+
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.h2.console.enabled=true
+spring.sql.init.mode=always
+spring.sql.init.schema-locations=classpath:ProductSchema.sql
+spring.sql.init.data-locations=classpath:ProductData.sql
