--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,4 @@ spring.sql.init.schema-locations=classpath:/model/schema.sql
 spring.sql.init.data-locations=classpath:/model/data.sql
 logging.level.org.springframework.transaction=DEBUG
 
+spring.jpa.hibernate.ddl-auto=update
