--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=spring-gift
+spring.thymeleaf.cache=false
+spring.thymeleaf.check-template-location=true
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+spring.mvc.hiddenmethod.filter.enabled=true
+spring.h2.console.enabled=true
+spring.datasource.username=sa
+spring.datasource.url=jdbc:h2:mem:test2
+logging.level.org.springframework.jdbc=debug
