--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,4 @@ spring.sql.init.platform=h2
 spring.jpa.hibernate.ddl-auto=update
 spring.sql.init.mode=always
 spring.sql.init.schema-locations=classpath:schema.sql
+spring.sql.init.data-locations=classpath:data.sql
