build : JDBC 연결 설정

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,6 @@
 spring.application.name=20jcode
 spring.mvc.hiddenmethod.filter.enabled=true
+
+spring.datasource.url=jdbc:h2:tcp://localhost/~/test
+spring.datasource.username=
+spring.datasource.password=
