--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,9 @@
 spring.application.name=20jcode
 spring.mvc.hiddenmethod.filter.enabled=true
 
-spring.datasource.url=jdbc:h2:tcp://localhost/~/test
-spring.datasource.username=
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+spring.datasource.url=jdbc:h2:~/test
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=na
 spring.datasource.password=
