전남대 BE_이현기_1주차 과제(1단계) (#75)
* docs: Add list of implemented features

* docs: Add detail explanation of implementation feature i1

* feat(Product): Add ProductClass

* feat(Product): Add ProductRepository class

ProductRepositroy class has singleton pattern, so create this repository with getInstance method
now if you create this class, then initial data also create
idGenerator make auto increment key

* feat(Product): Add ProductController class

API PATH : /api/products
GET : parameter Long id
POST : body Product product
PATCH : parameter Long id body Product product
DELETE : parmeter Long id

* feat: Add ProductResponseDTO

* refactor(Product): Remove ProductResponseDTO class and Add id variable in Product class

product class need id variable.
if product class does not have id variable, the code becomes too complicated

* refactor(Product): Remove initial data and Change all method return changed product

* refactor(Product): Remove ResponseEntity and get all values with RequestParam

* docs(Admin): Change list of implemented features for step2

* docs(Admin): Add admin page example image

* feat(Admin): Add thymeleaf dependency and properties

* feat(Admin): Add adminPage.html and adminPage.css

Admin controller is not connected not yet

* feat(Admin): Connect with server and view products each

* feat(Admin): Connect with thymleaf in adminPage Controller

* feat(Admin): Add modal in Add a new product button

* style(Admin): Design modal and split adminPage.css to adminPage.css and modal.css

* feat(Admin): Add addProduct function

* feat(Admin): Add product checkbox work

if you click first checkbox, then all of checkbox will be checked
also, if you check all of checkbox, then first checkbox will be checked

* style(Admin): Add comments on each component

* feat(Admin): Add delete checked row function and resultUrlAndReload function

when select some checkbox and click delete button, then those are d

--- a/build.gradle
+++ b/build.gradle
@@ -18,12 +18,21 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
-    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+    // Spring Boot 의존성 추가
     implementation 'org.springframework.boot:spring-boot-starter-web'
-    runtimeOnly 'com.h2database:h2'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
+    // Thymeleaf 의존성 추가
+    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+
+    //H2 데이터베이스 의존성 추가
+    runtimeOnly 'com.h2database:h2'
+    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
+
+    // E2E 테스트를 위한 selenium 의존성 추가
+    implementation 'org.seleniumhq.selenium:selenium-java:4.22.0'
+    implementation 'io.github.bonigarcia:webdrivermanager:5.9.1'
 }
 
 tasks.named('test') {
