--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=spring-gift
+spring.thymeleaf.cache=false
+# h2-console 사용
+spring.h2.console.enabled=true
+# db url
+spring.datasource.url=jdbc:h2:mem:test
