경북대 BE_박한솔_1주차 과제(1~3단계) (#164)
* Update README.md

* Update README.md

* Update README.md

* Update README.md

* init: 프로젝트 초기 설정[박한솔]

* feat: 상품 데이터 모델 작성[박한솔]

* feat: 로컬 스토리지 설정 및 이미지 저장 기능 구현[박한솔]

* feat: 상품 조회 기능 구현[박한솔]

* feat: 상품 추가 기능 구현[박한솔]

* feat: 상품 수정 기능 구현[박한솔]

* feat: 상품 삭제 기능 구현[박한솔]

* feat: 상품 이미지 전송 기능 구현[박한솔]

* feat: 서비스 테스트 코드 작성[박한솔]

* Update README.md

* feat: 상품 목록 조회 기능 추가[박한솔]

* feat: 상품 추가 기능 구현[박한솔]

* feat: 상품 수정 기능 구현[박한솔]

* feat: 상품 삭제 기능 구현[박한솔]

* feat: 이미지 업로드 기능 로직 구현[박한솔]

* feat: product.html 관리자 페이지 제작(이미지 업로드 버전)[박한솔]

* Update README.md

* Update README.md

* Refactor: JdbcProductRepository 클래스 및 데이터베이스와 상호작용 기능 추가[박한솔]

* feat: JdbcProductRepository findAll 메서드 구현[박한솔]

* feat: JdbcProductRepository findById 메서드 구현[박한솔]

* feat: JdbcProductRepository save 메서드 구현[박한솔]

* feat: JdbcProductRepository update 메서드 구현[박한솔]

* feat: JdbcProductRepository delete 메서드 구현[박한솔]

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,16 @@
 spring.application.name=spring-gift
+
+#logging.level.root=DEBUG
+
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.h2.console.enabled=false
+spring.h2.console.path=/h2-console
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+# SQL ??? ??
+spring.sql.init.schema-locations=classpath:schema.sql
+spring.sql.init.data-locations=classpath:data.sql
+spring.sql.init.mode=always
