--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 spring.application.name=spring-gift
+
+#h2 ??
+spring.h2.console.enabled=true
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.url=jdbc:h2:mem:test
+spring.datasource.username=sa
+spring.datasource.password=password
+
+# ??? ???? ?? ??
+spring.sql.init.schema-locations=classpath:/db/schema.sql
+spring.sql.init.mode=always
