--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 spring.application.name=spring-gift
+spring.thymeleaf.cache=false
+spring.h2.console.enabled=true
+spring.datasource.url=jdbc:h2:mem:test
