충남대 BE_이경빈_1주차 과제 (1~3단계) (#83)
* docs: 프로젝트 초기 설정 및 README.md 프로젝트 개요, 기능 목록 작성

* feat(model): Product와 ProductDTO 추가

* feat(product): 모든 상품 조회 기능 추가

* feat(product): 상품 ID로 조회 기능 추가

* feat(product): 상품 추가 기능 추가

* feat(product): 상품 수정 기능 추가

* feat(product): 상품 삭제 기능 추가

* fix(product): 누락된 Annotation 추가

* test(product): ProductRepository에 대한 unit test 추가

* test(product): ProductService에 대한 unit test 추가

* test(product): ProductController에 대한 unit test 추가

* 상품 CRUD 예외처리 추가

* refactor(product): ProductService의 convert DTO & Entity 메소드 static으로 변경

* docs: README.md step2 기능 목록 작성

* feat(admin): 모든 상품 조회 화면 구현

* feat(admin): 상품 추가 화면  구현

* feat(admin): 상품 수정 화면 구현

* feat(admin): 상품 삭제 기능 구현

* refactor(product): ProductService 유효성 검사 로직 중복 제거

* docs: README.md step3 기능 목록 작성

* H2 데이터베이스 초기화 및 설정

* feat(producT): JdbcTemplate 이용하여 기존 메모리 저장 로직을 데이터베이스 저장 로직으로 변경

* test(product): 저장 로직 변경에 따른 unit test 수정

* refactor(product): util 패키지를 추가하여 최종 리팩토링

* refactor: 6/29 코드리뷰 수정 제안 반영

--- a/build.gradle
+++ b/build.gradle
@@ -23,7 +23,9 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     runtimeOnly 'com.h2database:h2'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'org.mockito:mockito-core'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+    developmentOnly 'org.springframework.boot:spring-boot-devtools'
 }
 
 tasks.named('test') {
