--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=spring-gift
+spring.mvc.hiddenmethod.filter.enabled=true
+# h2-console ??? ??
+spring.h2.console.enabled=true
+# db url
+spring.datasource.url=jdbc:h2:mem:test
+spring.sql.init.schema-locations=classpath:db/h2/schema.sql
+spring.sql.init.data-locations=classpath:db/h2/data.sql
+spring.sql.init.mode=always
+debug=true
