--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,5 +11,6 @@ spring.datasource.username=sa
 spring.datasource.password=
 spring.sql.init.mode=always
 spring.sql.init.schema-locations=classpath:schema.sql
+spring.sql.init.data-locations=classpath:data.sql
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
