--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=spring-gift
+spring.datasource.url=jdbc:h2:mem:test
+spring.h2.console.enabled=true
+spring.datasource.username=sa
+
+spring.sql.init.schema-locations=classpath:schema.sql
+spring.sql.init.data-locations=classpath:data.sql
