부산대 BE_이영준 1주차 과제 제출합니다. step 1,2,3 (#217)
* Initial commit

* Update README.md

* Update README.md

* init

* init

* init

* feat(ProductController) : 컨트롤러 생성

"/api/products"로 들어오는 HTTP method에 대한 처리 진행

* feat : 상품 데이터 추가

id, name, price, imageUrl 추가

id는 생성 후 바뀌지 않음으로 final로 설정 - 수정을 막음

* chore : 오타수정

* feat : ProductManager 인터페이스 생성

클라이언트를 통해 컨트롤러에서 전달받은 요청을 처리하기 위한 인터페이스

* chore : ProductService로 이름 변경

MVC처럼 다른 사람이 파악할 수 있는 패턴으로 변경

* chore : ProductService로 이름 변경

MVC처럼 다른 사람이 파악할 수 있는 패턴으로 변경

* feat : GetMapping 추가, DTO 추가

* feat : ProductService 구현

DTO와 인터페이스 함께 추가

* feat : Product 컨트롤러 추가

* test : 컨트롤러 테스트 추가

* feat : 상품 setter 추가

제품 수정을 통해 변경될 수 있는 내용에 대해서 추가함

* fix : Bean 오류 수정

@Service에 대해서 수정 진행

* docs : step2 문서 작성

* feat : 상품 관리자 페이지 조회 추가

* docs : 1주차 step2 문서 추가

* chore : admin page - 타임리프 위한 final 제거

* feat : 관리자페이지 상품 추가 구현

* fix : 상품 추가 시 id가 변하도록 수정

* feat : 특정 상품 삭제 구현

html form 사용을 위해 application.properties 수정

* chore : 디버깅용 작성한 system.out 제거

* chore : 디버깅용 toString() 작성

* feat : 관리자 페이지 수정 추가

* build : H2 적용을 위한 Database 의존성 추가

* chore : Product type 변경

null을 위한 Long, Integer로 타입 변경

* feat : JDBC 생성

insertProduct
updateProduct
getProduct
findAllProducts
deleteProduct

* build : JDBC 연결 설정

* feat : ProductServiceImpl create 추가

DB에 새로운 Product 데이터를 생성한다

* feat : ProductServiceImpl update, delete 추가

* build : H2 database 설정 추가

* fix : jdbc 오류 수정

* refact : 주석 추가, 사용하지 않는 import 제거

* refact : 주석 추가

* refact : 주석 추가, update id 검사 방식 변경

* refact : 주석 추가, 정렬

* refact : 주석 추가, import 제거

* refact : 주석 추가

* 전남대 BE_안재영_1주차 과제(1단계) (#11)

* docs(README.md): 구현 기능 목록 작성

* feat(Product.java): 상품 클래스 작성

요구사항 구현을 위한 상품 클래스

* feat(ProductDatabase.java): 데이터베이스 역할을 하는 클래스 생성

데이터베이스 없이 구현하는 것이 요구사항이니까 메모리에 저장하는 역할을 하는 클래스 생성

* fix(Product): 변수 명 수정

변수의 시작이 대문자로 되어 있어서 수정

* feat(Prod

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
-spring.application.name=spring-gift
+spring.application.name=20jcode
+spring.mvc.hiddenmethod.filter.enabled=true
+
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+spring.datasource.url=jdbc:h2:~/test
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=na
+spring.datasource.password=
