--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=spring-gift
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+
+# database
+spring.h2.console.enabled=true
+spring.datasource.url=jdbc:h2:mem:test
+spring.datasource.username=kwin
+spring.sql.init.mode=always
